<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aplicacio0</string>
    <string name="app_title">Aplicación</string>
    <string name="btn_jugar">Jugar</string>
    <string name="btn_config">Configurar</string>
    <string name="btn_acerca">Acerca de</string>
    <string name="btn_salir">Salir</string>
    <string name="text_acercade">Esta aplicación ha sido desarrollada como ejemplo de el módulo
        de Diseño de Interficies Web para demostrar cómo se pueden lanzar nuevas actividades
        desde la actividad principal</string>
    <string name="menu_item_config">Configuracion</string>
    <string name="menu_acercaDe">Acerca de...</string>
    <string name="menu_cercar">Buscar</string>
    <string name="pa_key">preferencies_principal</string>
    <string name="pa0_title">Reproducir efectos de sonido</string>
    <string name="pa0_key">efectos</string>
    <string name="pa0_summary">Se reproducen efectos de sonido</string>
    <string name="pa1_title">Reproducir música</string>
    <string name="pa1_key">musica</string>
    <string name="pa1_summary">Se reproduce música de fondo</string>
    <string name="pa2_title">Tipo de gráficos</string>
    <string name="pa2_key">graficos</string>
    <string name="pa2_summary">Se escoge la representación de gráficos</string>
    <string name="pa3_title">Número de fragmentos</string>
    <string name="pa3_key">fragmentos</string>
    <string name="pa3_summary">En cuantos trozos se divide un asteroide</string>
    <string name="pre_category_title">MODO MULTIJUGADOR</string>
    <string name="pa4_key">multijugador</string>
    <string name="pa4_title">Activar modo multijugador</string>
    <string name="pa5_key">max_jugadores</string>
    <string name="pa5_title">Máximo de jugadores</string>
    <string name="pa6_key">conexion</string>
    <string name="pa6_title">Tipo de conexión</string>
    <string name="layout_punt_subtitol">Altre texte</string>
    <string name="pre_category2_title">MODO DE JUEGO</string>
    <string name="pa7_key">controles</string>
    <string name="pa7_summary">Cambia el sistema de controles de la aplicacion</string>
    <string name="pa7_title">Controles</string>
    <string name="pre_category3_title">Modo de guardado</string>
    <string name="pa8_key">guardado</string>
    <string name="pa8_summary">Donde desea que las puntuaciones se guarden</string>
    <string name="pa8_title">Guardado de puntuaciones</string>
</resources>
