<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:key="@string/pa_key"
    tools:ignore="MissingDefaultResource">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pa0_key"
        android:summary="@string/pa0_summary"
        android:title="@string/pa0_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/pa1_key"
        android:summary="@string/pa1_summary"
        android:title="@string/pa1_title" />
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/tipusGrafics"
        android:entryValues="@array/tipusGraficsValors"
        android:key="@string/pa2_key"
        android:summary="@string/pa2_summary"
        android:title="@string/pa2_title" />
    <EditTextPreference
        android:defaultValue="3"
        android:key="@string/pa3_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/pa3_summary"
        android:title="@string/pa3_title" />
    <PreferenceCategory android:title="@string/pre_category_title">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pa4_key"
            android:title="@string/pa4_title"/>
        <EditTextPreference
            android:defaultValue="1"
            android:key="@string/pa5_key"
            android:title="@string/pa5_title"
            android:selectAllOnFocus="true"
            android:singleLine="true"/>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/tipusConexio"
            android:entryValues="@array/tipusConexioValors"
            android:key="@string/pa6_key"
            android:title="@string/pa6_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pre_category2_title">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/controlsJoc"
            android:entryValues="@array/controlsJocValors"
            android:key="@string/pa7_key"
            android:summary="@string/pa7_summary"
            android:title="@string/pa7_title" />
    </PreferenceCategory>
</PreferenceScreen>