<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anddroid2="http://schemas.android.com/tools">

    <item
        android:id="@+id/menuconfiguracio"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="@integer/category2"
        android:title="@string/menu_item_config"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menuacercade"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="@integer/category3"
        android:title="@string/menu_acercaDe" />
    <item
        android:title="@string/menu_cercar"
        android:id="@+id/cercar"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="@integer/category4"
        app:showAsAction="always|collapseActionView" />
</menu>